# backstory

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  findings.md  progress.md  pyproject.toml  task_plan.md  venv
.claude/: settings.json
.claude/memory/: prelaunch-checklist.md
.github/workflows/: publish.yml
docs/: engineering-walkthrough.md  ideas-priority-plan.md  integration.md  prd.md  retrieval.md
docs/ideas/: 01-zero-friction-capture.md  02-contradiction-detection.md  03-pr-ci-surfacing.md  04-code-memory-cards.md  05-backstory-code.md  06-evolution-timeline.md  07-superseded-conflicting-memory.md  08-before-edit-context.md  09-agent-context-packet.md  10-trace-as-events.md  11-why-confidence.md  12-decision-extraction-model.md  13-explain-diff.md  14-review-mode.md  15-pr-markdown-export.md  16-adapter-architecture.md  17-cross-agent-session-stitching.md  18-simple-integration-contract.md  19-memory-hygiene-commands.md  20-rebase-amend-repair.md  21-session-quality-scoring.md  22-retention-pruning.md  23-privacy-modes.md  24-init-redaction-posture.md  25-natural-language-search.md  26-per-line-why.md  27-local-web-viewer.md
examples/ai-subscription-bug/: demo.md
src/agent_why/: __init__.py  cli.py
src/backstory/: __init__.py  attach.py  cli.py  config.py  contradiction.py  dump.py  (+13 more)
tests/: test_attach.py  test_cli.py  test_config.py  test_contradiction.py  test_dump.py  test_git_notes.py  test_hooks.py  test_init.py  test_redact.py  test_retrieval.py  test_search.py  test_storage.py  test_summarize.py  test_transcript.py  test_why.py
(+6 files in other folders)
