[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-why"
version = "0.1.0"
description = "Local-first CLI for AI commit memory"
requires-python = ">=3.11"

[project.scripts]
agent-why = "agent_why.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
