[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backstory-cli"
version = "0.2.0"
description = "Every AI-assisted commit has a backstory. Never lose it again."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"

[project.scripts]
backstory = "backstory.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
